agrego 3 respuestas de retrospectiva

--- a/views/register.html
+++ b/views/register.html
@@ -16,12 +16,12 @@
 
     </header>
 
-    <main>
-
+    <main> <!-- aca va el registro-->
+        
     </main>
 
     <footer>
-
+        
     </footer>
 
 </body>
