--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,85 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,100&display=swap');
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
+/* ----- Mobile first ----- */
+header {
+    background-color: #D1A77D;
+    padding: 20px;
+    margin: 0 auto;
+}
 
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.center-navbar {
+    display: flex;
+    justify-content: center;
+}
+
+.logo {
+    width: 20%;
+}
+
+.left-navbar {
+    display: flex;
+}
+
+.hamburguer-button {
+    display: flex;
+    justify-content: center;
+    background-color: #091A26;
+    border-radius: 10%;
+    color: #ebebeb;
+    width: 55px;
+    height: 45px;
+    font-size: 40px;
+}
+
+.right-navbar {
+    display: flex;
+    list-style: none;
+    gap: 25px;
+}
+
+/* Tip: modifica todos los iconos */
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 700,
+        'GRAD' 0,
+        'opsz' 48
+}
 body {
-    font-family: 'Roboto', sans-serif ;
+    font-family: 'Roboto', sans-serif;
 }
 
 body p {
     font-weight: 400;
 }
 
+footer {
+    background-color: #EAE2CD;
+}
+
+.main-footer {
+    text-align: center;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.main-container-footer {
+    margin-top: 20px;
+}
+
+.bottom-footer-text{
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+/* ----- FIN Mobile first ----- */
