--- a/views/productCard.html
+++ b/views/productCard.html
@@ -11,9 +11,10 @@
         <link rel="stylesheet" href="/css/productCard.css">
 </head>
 <body>
-    
     <header>
+        <div class="encabezado">
 
+        </div>
     </header>
 
     <main>
