--- a/views/index.html
+++ b/views/index.html
@@ -33,8 +33,8 @@
     </header>
 
     <main>
-        <h3> Hola soy Omar</h3>
-        <p>hola mundo</p>
+        <h3> prueba</h3>
+
     </main>
 
     <footer>
