--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,7 +69,7 @@ footer {
 
 .main-footer {
     text-align: center;
-    padding: 20px;
+    padding: 15px;
     margin: 0 auto;
 }
 
@@ -83,3 +83,19 @@ footer {
 }
 
 /* ----- FIN Mobile first ----- */
+
+/* ----- Tablet ----- */
+@media (min-width: 361px) {
+    .main-footer {
+        display: flex;
+        flex-direction: row;
+    }
+    .main-container-footer {
+        text-align: center;
+        margin: 15px;
+    }
+}
+/* ----- Desktop ----- */
+@media (min-width: 769px) {
+    
+}
