--- a/views/index.html
+++ b/views/index.html
@@ -56,8 +56,7 @@
                 <i class="material-symbols-outlined container-footer-icon">design_services</i>
                 <h3 class="foooter-text-align">Crea tu producto</h3>
                 <p class="foooter-text-align">Nuestro equipo de diseñadores y artesanos trabajará contigo para crear un
-                    producto
-                    que se adapte perfectamente a tus gustos, necesidades y estilo personal.
+                    producto que se adapte perfectamente a tus gustos, necesidades y estilo personal.
                 </p>
             </article>
         </section>
