modificaciones index y subida de foto productos

--- a/views/index.html
+++ b/views/index.html
@@ -31,9 +31,144 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <h3> prueba 2 </h3>
+        <section class="container"></section> <!-- container -->
+            <article class="container-carousel"> <!-- slider-wrapper -->
+                <div class="container-carousel-images"> <!-- slider -->
+                    <img id="slide-1" src="./img/img-aromatizador.jpg" alt="publicidad">
+                    <img id="slide-2" src="./img/img-mesa-limitada.jpg" alt="publicidad">
+                    <img id="slide-3" src="./img/img-mesa2.jpg" alt="publicidad">
+                </div>
+                <div class="slider-nav">
+                    <a href="#slide-1"></a>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-3"></a>
+                </div>
+            </article>
+        </section>
+        <h2> Productos destacados </h2>
+        <section class="container">
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-mesa-limitada.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-aromatizador.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-adorno-caput.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-mesa2.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <h2> Nueva colección </h2>
+        <section class="container">
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-mesa-limitada.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-aromatizador.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-adorno-caput.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+            <article class="container-product">
+                <img class="container-product-img" src="./img/img-mesa2.jpg" alt="imagen de un producto">
+                <div class="container-product-description">
+                    <i class="material-symbols-outlined icon-add-shopping-cart"> add_shopping_cart</i>
+                    <p class="categoria">Mesas</p>
+                    <p class="nombre">Feller Roup</p>
+                    <div class="container-money">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <h2> Productos según tu espacio </h2>
+        <section class="container">
+            <article class="container-categorias">
+                <div class="container-categorias-img">
+                    <img class="img-maxsize" src="./img/img-mesa-limitada.jpg" alt="imagen de un producto">
+                    <h3> Exterior </h3>
+                </div>
+            </article>
+            <article class="container-categorias">
+                <div class="container-categorias-img">
+                    <img class="img-maxsize" src="./img/img-mesa-limitada.jpg" alt="imagen de un producto">
+                    <h3> Interior </h3>
+                </div>
+            </article>
+            <article class="container-categorias">
+                <div class="container-categorias-img">
+                    <img class="img-maxsize" src="./img/img-mesa-limitada.jpg" alt="imagen de un producto">
+                    <h3> Accesorios </h3>
+                </div>
+            </article>
+        </section>
     </main>
 
     <footer>
