--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,7 +31,7 @@ body p {
     padding: 1rem;
 }
 
-/* sección carrusel */
+/* sección navbar */
 nav {
     display: flex;
     align-items: center;
