--- a/public/css/productCard.css
+++ b/public/css/productCard.css
@@ -5,9 +5,13 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+a{
+    text-decoration: none;
+}
 /* ----- Mobile first ----- */
 header {
-    background-color: #D1A77D;
+    background-color:#122f44;
     padding: 20px;
     margin: 0 auto;
 }
@@ -47,13 +51,9 @@ nav {
     gap: 25px;
 }
 
-.titulo{
-    text-align: center;
-}
-
-
 /* Tip: modifica todos los iconos */
 .material-symbols-outlined {
+    color: white;
     font-variation-settings:
         'FILL' 0,
         'wght' 700,
@@ -66,6 +66,80 @@ body {
 
 body p {
     font-weight: 400;
+}
+
+h2{
+    text-align: center;
+    padding: 3%;
+}
+.fondo-carrito{
+    background-color: #F3E8CC;
+}
+
+.titulo-carrito{
+    text-align: center;
+    font-weight: bold;
+    padding: 3%;
+}
+
+.subtitulos-carrito{
+    flex-direction: row;
+    display: flex;
+    justify-content:space-around;
+    margin-left: 40%;
+}
+
+.product1{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3%;
+    background-color: #cbc5b5;
+    margin: 5%;
+    border-radius: 10px;
+}
+
+
+.product2{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3%;
+    margin: 5%;
+    background-color:#cbc5b5;
+}
+
+.product3{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3%;
+    margin: 5%;
+    background-color:#cbc5b5;
+}
+
+.seguirComprando a{
+        background-color: #EAE2CD;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        background-color: #122f44;
+        width: 20px; 
+      }
+
+.seguirComprando{
+    text-align: right;
+    margin-right: 5%;
+    padding-bottom: 20px;
+}
+
+.textoBoton{
+    color: white;
 }
 
 footer {
