--- a/views/productCard.html
+++ b/views/productCard.html
@@ -40,17 +40,17 @@
 
         <main class="fondo-carrito">
             <h2>Carrito de Compras</h2>
-            <div class="subtitulos-carrito">            
+            <div class="subtitulos-carrito">
                 <div>Producto</div>
                 <div>Cantidad</div>
                 <div>Precio</div>
             </div>
 
             <div class="product1">
-                <div class="productoContenido">
-                    <img src="./img/descarga.jpg" alt="Imagen de 1er producto">
+                <div class="img-producto">
+                    <img src="./img/img-celular-stand.jpg" alt="Imagen de 1er producto">
                 </div>
-                <div>Descripción producto uno</div>
+                <div class="texto">El soporte de teléfono XYZ es la solución perfecta para mantener tu teléfono inteligente seguro, visible y al alcance de tus manos en todo momento. Diseñado con la combinación ideal de funcionalidad y estilo, este soporte está hecho para adaptarse a las necesidades de los usuarios más exigentes.</div>
                 <div>
                     <div class="contador">
                         <button><i class="fa-solid fa-minus"></i></button>
@@ -63,10 +63,10 @@
                 </div>
             </div>
             <div class="product2">
-                <div>
-                    <img src="./img/descarga.jpg" alt="Imagen de 1er producto">
+                <div class="img-producto">
+                    <img src="./img/img-espejo-roble.jpg" alt="Imagen de 2do producto">
                 </div>
-                <div>Descripción producto uno</div>
+                <div class="texto"> Del espejo Reflections es mucho más que un simple reflejo; es una ventana a tu estilo, belleza y autoexpresión. Diseñado con precisión y elegancia, este espejo encarna la perfecta combinación entre funcionalidad y sofisticación.</div>
                 <div>
                     <div class="contador">
                         <button><i class="fa-solid fa-minus"></i></button>
@@ -75,14 +75,14 @@
                     </div>
                 </div>
                 <div>
-                    <p>$50.000</p>
+                    <p>$45.000</p>
                 </div>
             </div>
             <div class="product3">
-                <div>
-                    <img src="./img/descarga.jpg" alt="Imagen de 1er producto">
+                <div class="img-producto">
+                    <img src="./img/img-lampara-temp.jpg" alt="Imagen de 3er producto">
                 </div>
-                <div>Descripción producto uno</div>
+                <div class="texto"> La lámpara Luminaris es una obra maestra de iluminación que combina estilo, funcionalidad y sofisticación en una sola pieza. Diseñada para iluminar tu espacio con elegancia y crear una atmósfera acogedora, esta lámpara es mucho más que una simple fuente de luz.</div>
                 <div>
                     <div class="contador">
                         <button><i class="fa-solid fa-minus"></i></button>
@@ -91,12 +91,15 @@
                     </div>
                 </div>
                 <div>
-                    <p>$50.000</p>
+                    <p>$70.000</p>
                 </div>
-            </div>
-            <div class="seguirComprando">
-                <a href="/index" class="textoBoton">Seguir comprando</a>
-            </div>
+                </div>
+                    <div class="seguirComprando">
+                        <a href="/index" class="textoBoton">Seguir comprando</a>
+                    </div>
+                    <div class="finalizarCompra">
+                        <a href="/index" class="textoBoton">Finalizar compra</a>
+                    </div>
         </main>
 
         <footer>
