Agregando funcionalidad al boton de Home

--- a/views/productCard.html
+++ b/views/productCard.html
@@ -26,9 +26,9 @@
                 </div>
 
                 <div class="center-navbar">
-                    <img src="./img/img-furni-house-logo.svg" alt="logo" class="logo">
+                    <a href="/index"><img src="./img/img-furni-house-logo.svg" alt="logo" class="logo"></a>
                 </div>
-
+                
                 <ul class="right-navbar">
                     <li><a href="#"></a><i class="material-symbols-outlined">search</i></li>
                     <li><a href="/login"></a><i class="material-symbols-outlined">login</i></li>
