--- a/views/register.html
+++ b/views/register.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="center-navbar">
-                <img src="./img/img-furni-house-logo.svg" alt="logo" class="logo">
+                <a href="/index"><img src="./img/img-furni-house-logo.svg" alt="logo" class="logo"></a>
             </div>
 
             <ul class="right-navbar">
