--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- head -->
-    <%- include('./partials/head') %>
+    <%- include('../partials/head') %>
 <body>
     <!-- header -->
-    <%- include('./partials/header') %>
+    <%- include('../partials/header') %>
     <main>
         <section class="container"></section> <!-- container -->
             <article class="container-carousel"> <!-- slider-wrapper -->
@@ -145,7 +145,7 @@
         </section>
     </main>
     <!-- footer -->
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
 </body>
 
 </html>
