--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- head -->
+<head>
     <%- include('../partials/head') %>
+
+    <link rel="stylesheet" href="/css/index.css">
+</head>
 <body>
     <!-- header -->
     <%- include('../partials/header') %>
