agregando cambios al productDetail

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -46,6 +46,11 @@
         cursor: pointer;
         font-size: 16px;
       }
+      
+      button{
+        text-align: center;
+        align-items: center;
+      }
   
       input[type="submit"]:hover {
         background-color: #091a26;
