--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -96,6 +96,38 @@
 
         </section>
 
+        <section>
+
+            <h2>Opiniones Clientes</h2>
+                <div class="container-icon-start">
+                    <p>4.5</p>
+                    <i class="material-symbols-outlined icon-start-rate">
+                        star_rate
+                    </i>
+                    <i class="material-symbols-outlined icon-start-rate">
+                        star_rate
+                    </i>
+                    <i class="material-symbols-outlined icon-start-rate">
+                        star_rate
+                    </i>
+                    <i class="material-symbols-outlined icon-start-rate">
+                        star_rate
+                    </i>
+                    <i class="material-symbols-outlined icon-start-rate-half">
+                        star_rate_half
+                    </i>
+                </div>
+                <p class= "excelente">Excelente producto</p>
+                <h3>Rosa Mina</h3>
+                <p class= "descripcion"> 
+                Recientemente adquirí esta mesa de madera para mi comedor y estoy encantado con ella. 
+                El grano de la madera es hermoso y los tonos cálidos le dan un toque acogedor a la habitación.
+                La calidad de construcción de la mesa es excepcional. Se nota que se utilizaron materiales de alta calidad
+                </p>
+
+
+        </section>
+
     </main>
 
     <footer>
