agregando informacion al productDetail

--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -89,11 +89,45 @@
                         <p> -Uso recomendado: En interiores, exteriores, en salones, dormitorios, etc.</p>
                         <p> -Garantía: 1 año, por defectos de fabricación. </p>
                     </div>
+                    
+                    <article>
+
+                        <h2>Opiniones Clientes</h2>
+                            <div class="container-icon-start">
+                                <p>4.5</p>
+                                <i class="material-symbols-outlined icon-start-rate">
+                                    star_rate
+                                </i>
+                                <i class="material-symbols-outlined icon-start-rate">
+                                    star_rate
+                                </i>
+                                <i class="material-symbols-outlined icon-start-rate">
+                                    star_rate
+                                </i>
+                                <i class="material-symbols-outlined icon-start-rate">
+                                    star_rate
+                                </i>
+                                <i class="material-symbols-outlined icon-start-rate-half">
+                                    star_rate_half
+                                </i>
+                            </div>
+                            <p class= "excelente">Excelente producto</p>
+                            <h3>Rosa Mina</h3>
+                            <p class= "descripcion"> 
+                            Recientemente adquirí esta mesa de madera para mi comedor y estoy encantado con ella. 
+                            El grano de la madera es hermoso y los tonos cálidos le dan un toque acogedor a la habitación.
+                            La calidad de construcción de la mesa es excepcional. Se nota que se utilizaron materiales de alta calidad
+                            </p>
+            
+                        </article>
                 </article>
+                
 
             </section>
 
         </main>
+
+        
 
         <%- include('../partials/footer') %>
 
